--- a/lab_3/build.gradle
+++ b/lab_3/build.gradle
@@ -5,14 +5,26 @@ repositories {
 apply plugin: 'java'
 apply plugin: 'application'
 
-mainClassName = 'xyz.stanko.ilj.Main'
+mainClassName = 'phone.Main'
+
+repositories {
+   flatDir {
+       dirs 'lib'
+   }
+}
 
 dependencies {
   testCompile 'junit:junit:4.12'
+  testCompile group: 'org.easymock', name: 'easymock', version: '3.4'
+  compile name: 'automat'
+  compile name: 'cglib-nodep-2.2'
+  compile name: 'objenesis-1.2'
+  compile name: 'Smc'
+  compile name: 'statemap'
 }
 
 jar {
-  manifest {
-     attributes 'Main-Class': 'xyz.stanko.ilj.Main'
-  }
+    manifest {
+        attributes 'Main-Class': 'phone.Main'
+    }
 }
